--- a/final_Session2.ipynb
+++ b/final_Session2.ipynb
@@ -6,6 +6,7 @@
       "name": "final Session2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -634,6 +635,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "FVjGh2Yx60GA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "02349296-df5b-4281-906f-b4b68e483ee7"
+      },
+      "source": [
+        "layer_names = []\n",
+        "for layer in model.layers[:4]:\n",
+        "    layer_names.append(layer.name) # Names of the layers, so you can have them as part of your plot\n",
+        "    \n",
+        "layer_names"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['conv2d_13', 'conv2d_14', 'flatten_5', 'dense_4']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Sst4KneiyOL5",
         "colab_type": "code",
         "colab": {}
@@ -753,7 +788,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 416
+          "height": 436
         },
         "outputId": "7937b00a-cb85-4ba7-f40f-bb8542cc986a"
       },
