--- a/Fred_4_DNN.ipynb
+++ b/Fred_4_DNN.ipynb
@@ -56,9 +56,9 @@
         "2.   Using higher kernels at start, to be able to find as fast/early possibly local features\n",
         "3.   I also found out that we only have 3 options to reduce the total number of parameters:\n",
         "\n",
-        "*   Convolution2D(X, 1, activation='relu') reduces the output to size X\n",
-        "*   Convolution2D(10, Y)) reduces the output's first 2 values to 1 (works like an encoder)\n",
-        "*   MaxPooling2D(pool_size = (2, 2)) halfs the size by 2\n",
+        " - Convolution2D(X, 1, activation='relu') reduces the output to size X\n",
+        " - Convolution2D(10, Y)) reduces the output's first 2 values to 1 (works like an encoder)\n",
+        " - MaxPooling2D(pool_size = (2, 2)) halfs the size by 2\n",
         "\n",
         "\n",
         "\n"
@@ -71,7 +71,7 @@
         "colab_type": "text"
       },
       "source": [
-        "So all we had to do is play with these findings to reduce the number of parameters and to find enought spacial room in our model to fit 99,5%!"
+        "So all we had to do is play with these findings to reduce the number of parameters and to find enough spacial room in our model to fit 99,5%!"
       ]
     },
     {
